examples/good/09-02-static-binding-on-functions.dog
int fun(int x) {
    return x;
}

int fun2(int x) {
    return 0;
}

Fun<int(int)> x = fun;
yeet x(5);
{
    Fun<int(int)> x;
    x = fun2;
    yeet x(5);
}
yeet x(5);