examples/bad/07-02-function-as-rvalue.dog
int fun(int x) {
    return x;
}

int fun(Fun<int(int)>& ff) {
    return f(5);
}